--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,9 @@
     <string name="item_name_hint">Item Name</string>
     <string name="item_price_hint">Ex: $20.00</string>
     <string name="item_url_hint">Ex: https://store.com/item-url</string>
-    <string name="submit_button">Submit</string>
+    <string name="add_item">Add Item</string>
     <string name="your_wishlist_is_empty">Wishlist is empty</string>
+    <string name="item_name">Item Name</string>
+    <string name="url">URL</string>
+    <string name="price">Price</string>
 </resources>
